--- a/Lec/1.md
+++ b/Lec/1.md
@@ -1,7 +1,7 @@
 # Задачи и документальное обеспечение системного администрирования
 
 
-## Круг обязанностей Сис. Админа
+## Круг обязанностей Системного Администратора
 
 С должностью Системного Администратора связано множество различных задач: обслуживание вычислительной техники, локальных
 вычислительных сетей, офисной техники и информационных систем.
@@ -9,19 +9,18 @@
 
 ## Документация
 
-Без ведения записей можно лишиться возможности быстро ввести в курс дела новых сотрудников и передать обязанности на время отпуска или болезней или в случае форсмажорных обстоятельств. 
+ Без ведения записей вы лишаетесь возможности быстро ввести в курс дела новых сотрудников и передать обязанности на время отпуска или болезни. Особенно хорошо проблема плохого документирования чувствуется при приходе на новое место, где в срочном порядке нужно решать проблемы, а где что и как настроено никто не знает. Кроме того, в работе часть встречаются задачи, которые делаются раз в год. Чтобы быстро повторить их через такой промежуток времени очень удобно иметь чётко записанную. последовательность действий с прошлого раза.
+ 
+Существуют формальные правила оформления документации (ГОСТ 2.601-2013), но они охватывают в большей степени её оформление, чем требования к содержанию.
 
-Существуют правила оформления документации (ГОСТ 2.601-2013), но эти правила касаются в большей мере того, как она должна быть оформлена (терминология, стандарт оформления и т.д), чем её конкретного содержания. 
+По сути документация - это вариант сочинения на техническую тему, в котором нужно осветить все ключевые моменты о состоянии обслуживаемой инфраструктуры (оборудование или информационная система и их настройки), шаги по настройке и известные проблемы. В том числе можно указать планируемые работы и обновления. Для составления грамотной системы документации нужен опыт и в ряде случаев для её создания могут привлекаться отдельные специалисты - технические писатели. 
 
-Из этого можно сделать вывод, что документация - это что-то вроде  сочинения на техническую тему , в котором необходимо осветить все основные моменты о состоянии обслуживаемой инфраструктуры, а также шаги по настройке и известные проблемы. Ко всему прочему сюда же можно добавить и планируемые работы и обновления. 
-
-Формат документации не имеет принципиального значения, единственным обязательным требованием является наличие содержания для быстрой навигации и возможность экспортировать в pdf.
+Формат документации не имеет принципиального значения и может быть как офисным документом, так и сайтом на wiki-движке (или другом, даже самописном по желанию). Единственное обязательное требование - наличие содержания для быстрой навигации и возможность экспортировать в печатный вид (pdf).
 
 
 ## Отслеживание времени
 
-Многие задачи требуют не просто выполнения работы, но и выполнения её в точные указанные сроки. 
-Как и с в случае с документацией, управление временем не специфично для администратора, но тем не менее и ему отводится своя роль.
+Многие задачи требуют не просто выполнения работы, а выполнения её в точные сроки. Как и документация управление временем не специфично для системного администрирования. 
 
 
 ## Закупки
