--- a/Lec/2.md
+++ b/Lec/2.md
@@ -1,7 +1,7 @@
 # Основные настройки ОС
 
 
-После первоначальной установки ОС, зачастую могут потребоваться **дополнительные настройки**. 
+После первоначальной установки ОС, зачастую могут потребоваться дополнительные настройки. 
 К ним могут относиться настройки окружения (оформление системы, установка предпочитаемых приложений и т.д), а также общесистемные настройки.
 
 
