--- a/Lec/2.md
+++ b/Lec/2.md
@@ -7,36 +7,20 @@
 
 ## Настройка сети
 
-Во-первых, необходимо настроить подключение к сети. 
+Первая вещь, которую практически всегда приходится делать на современных компьютерах - настройки подключения к сети. 
+В случае домашних компьютеров это скорее всего будет беспроводная сеть стандарта 802.11. Для её настройки понадобится найти сеть в списке доступных и ввести общий ключ. В домашней сети с настроенным маршрутизатором настроек делать не придётся - все современные ОС по умолчанию пытаются получить адрес по протоколу DHCP и после подключения кабеля автоматически получат все необходимые настройки с маршрутизатора. Большинство провайдеров сейчас либо предоставляет свои настроенные маршрутизаторы в момент подключения (например при использовании технологии GPON), либо проводят в квартиру обычную витую пару, по которой устройство (как компьютер, так и маршрутизатор) автоматически получают все необходимые настройки по DHCP. Если такой автоматизации не предусмотрено, то придётся вводить настройки вручную. Мы рассмотрим только вариант подключения по сети Ethernet используя стек протоколов TCP/IP. Используемые провайдерами технологии PPPoE, PPTP и L2TP будут рассмотрены в курсе про сетевые технологии.
 
-В домашней сети с уже настроенным маршрутизатором дополнительных настроек зачастую производить не нужно - все необходимые настройки современная ОС сама попытается получить по протоколу динамической настройки *DHCP*. 
-Если же этого не произошло по тем или иным причинам, сеть придётся настраивать вручную. В данном случае рассмотрим вариант подключения по сети *Ethernet* через стек протоколов *TCP/IP*.
+Обязательных настроек для подключения к сети **Ethernet** нет. Сетевая карта имеет установленный на заводе MAC адрес и драйвер берёт на себя всю работу по преобразованию данных в необходимые для сети Ethernet форматы. Нужно отметить, что сейчас существует возможность изменять MAC адрес в настройках сетевой карты. Наличие двух одинаковых MAC адресов в сети способно вызвать сложно отслеживаемые перебои в работе. 
 
-Обязательных настроек для подключения к сети Ethernet нет. Сетевая карта имеет установленный на заводе *MAC* адрес и драйвер берёт на себя всю работу по преобразованию данных. 
-Конечно, присутствует и возможность изменить MAC адрес в настройках сетевой карты, но это действие нужно производить, только в случаях, когда это действительно необходимо,
-так как наличие двух одинаковых MAC адресов в сети может вызвать перебои в её работе.
+Для работы в IP сети необходимо настроить IP адрес, маску подсети, шлюз по умолчанию и  DNS сервера. Адрес необходим для уникальной идентификации компьютера при передачи ему информации. Он же будет использоваться всеми сетевыми службами в журналах для идентификации источника информации. **Маска** подсети определяет группу компьютеров, которым можно обращаться непосредственно. Ко всем остальным запросы будут отправляться через шлюз. DNS сервера используются для упрощения работы с адресами компьютеров и адресов сетевых служб. Без DNS серверов нельзя будет обращаться к удалённым машинам используя символьные имена. Но при использовании IP адресов всё будет прекрасно работать. Строго говоря достаточно одного DNS сервера. Но для обеспечения надёжной работы их всегда используют парами - основной и резервный.
 
-Для работы в IP сети необходимо настроить *IP адрес*, *маску подсети*, *шлюз по умолчанию* и *DNS сервера*.
+**Имя компьютера**. Она используется при настройке служб на самом компьютере и должна совпадать с его именем, прописанным в DNS. К сожалению это не является обязательным и никак не контролируется, но может привести к путанице в крупных сетях. 
 
-- IP Адрес необходим для уникальной идентификации компьютера при передачи ему информации.
-- Маска подсети определяет группу компьютеров, которым можно обращаться непосредственно
-- DNS сервера используются для упрощения работы с адресами компьютеров и адресов сетевых служб
+Настройка в Windows: GUI в server 2012 и в windows 10 будет рассмотрена на лекции и добавлено в виде записи занятия. Можно провести настройку используя команды powershell, но это требует очень хорошего понимания схемы именования интерфейсов и настраиваемых компонентов. К тому же такая настройка по факту производится редко и в большей степени для автоматизации при построении сложных инфраструктурх.
 
-Так же важной настройкой для работы сети является **Имя Компьютера**. Она используется для настройки служб сети на самом компьютере
-и должна совпадать с его именем, прописанным в DNS (это конечно не является обязательным, но может привести к путанице в крупных сетях).
+При настройка в Linux есть два пути - графический интерфейс для NetworkManager, аналогичный ему интерфейс из псевдографики в консоли и настройка через конфигурационные файлы. К сожалению, последний вариант сильно зависит от конкретного дистрибутива и не является универсальным. Но работает надёжней и более предсказуемо, чем Network Manager.
 
-Настройку систем Windows можно провести используя средства графического интерфейса или команды **powershell**.
-
-В системах семейства Linux, можно использовать графический интерфейс для **Network Manager** или аналогичные ему консольные команды
-и псевдографики в консоли или использовать конфигурационные файлы (не является универсальным способом, так как существует множество дистрибутивов Linux 
-(Debian/Ubuntu, Red Hat, Mint, Astra Linux и т.д.) и между ними имеются некоторые различия)
-
-Для проверки и тестирования сети существуют различные команды:
-
-Для **Linux**: ping, tracert, nslookup
-
-Для **Windows**: ping, traceroute, nslookup
-
+Для проверки и тестирования сети существуют консольные утилиты. По сути только консольные, графический интерфейс создаётся для них крайне редко. В Windows: ping, tracert, nslookup. В Linux: ping, traceroute, nslookup (dig). Подробнее они будут описаны в разделе про работу в консоли.
 
 ## Настройка локальных пользователей
 
