--- a/Lec/4.md
+++ b/Lec/4.md
@@ -5,7 +5,7 @@
 
 Виртуальные машины (ВМ) представляют из себя изолированные окружения, в которых можно запускать различные операционные системы на одном физическом сервере. Это позволяет делить ресурсы сервера для нескольких служб, а так же упрощает резервное копирование и обслуживание аппаратного обеспечения. Для распределения ресурсов между  ВМ и управления ими используется **гипервизор**. Гипервизор представляет из себя специализированную ОС, из которой убраны все роли, кроме необходимых для поддежки работы ВМ.
 
-Сейчас существует 4 наиболее часто используемых гипервизора - **VmWar**e, **Microsoft** **HyperV**, **Xen** и **KVM**. **VmWare** занимает большую часть рынка коммерческой виртуализации. HyperV представляет их себя часть MS Windows и доступна в серверных ОС и настольных редакции Pro и более продвинутых. Xen и KVM являются частью ОС Linux. **Xen** более старый проект, от которого сейчас постепенно отказываются в пользу **KVM**. По возможностям сложно сказать, какое из упомянутых решений лучше. У кого-то лучше чисто технические характеристики, у кого-то поддержка, что-то доступно для работы без необходимости покупки лицензии. Нами буду рассмотрены **HyperV** и **KVM** как наиболее легко доступные в рамках нашего курса.
+Сейчас существует 4 наиболее часто используемых гипервизора - **VmWar**e, **Microsoft** **HyperV**, **Xen** и **KVM**. **VmWare** занимает большую часть рынка коммерческой виртуализации. HyperV представляет их себя часть MS Windows и доступна в серверных ОС и настольных редакции Pro и более продвинутых. Xen и KVM являются частью ОС Linux. **Xen** более старый проект, от которого сейчас постепенно отказываются в пользу **KVM**. По возможностям сложно сказать, какое из упомянутых решений лучше. У кого-то лучше чисто технические характеристики, у кого-то поддержка, что-то доступно для работы без необходимости покупки лицензии.
 
 ## HyperV
 **HyperV** устанавливается как роль в Windows Server или через добавление компонентов Windows в настольных версиях. Для полноценной работы ВМ необходимо создать виртуальный сетевой коммутатор, без этого они не будут иметь выхода в сеть. 
