--- a/Lec/5.md
+++ b/Lec/5.md
@@ -1,21 +1,15 @@
 # Работа в командном интерпритаторе bash и команды для базовой настройки
 
 ## Командные интерпретаторы
-Существует два варианта построения пользовательского интерфейса - графический (GUI) и командной строки (CLI) - интерфейс командной строки он же терминал.
+Существует два варианта построения пользовательского интерфейса - графический (GUI) и командной строки (терминал).
 
-Графический интерфейс является интуитивно понятным для рядового пользователя и позволяет значительно быстрее освоить управление компьютером. 
-Но GUI является более сложным в разработке и требует большего количества вычислительных ресурсов. 
-CLI строится на взаимодействие с ЭВМ с помощью ввода текстовых строк, содержащих команду и её параметры. 
-Данный подход требует знания команд и особенностей их работы и более долгого периода обучения. Благодаря взаимодействию с ЭВМ с помощью текстовых строк интерфейс командной строки позволяет очень легко производить автоматизация частых или массовых действий. 
-Для этого можно использовать скрипты, содержащие последовательность команд и управляющие конструкции, схожие с высокоуровневыми языками программирования. Примером таких конструкция могут служить циклы и условные переходы. 
+Графический интерфейс ориентирован на интуитивно-понятное управление и взаимодействие с пользователем с помощью визуальных элементов и манипулятора мышь либо сенсорного экрана. Для обычных пользователей этот интерфейс позволяет значительно быстрее освоить взаимодействие с ЭВМ. Но GUI является более сложным в разработке и требует большего количества вычислительных ресурсов. Интерфейс командной строки строится на взаимодействие с ЭВМ с помощью ввода текстовых строк, содержащих команду и её параметры. Такой подход требует знания команд и особенностей их работы и более долгого периода обучения. Некоторые задачи можно одинаково эффективно выполнять в обоих вариациях интерфейса, некоторые - только в одном. Благодаря взаимодействию с ЭВМ с помощью текстовых строк интерфейс командной строки позволяет очень легко производить автоматизация частых или массовых действий. Для этого можно использовать скрипты, содержащие последовательность команд и управляющие конструкции, аналогичные языкам программирования высокого уровня. Примером таких конструкция могут служить циклы и условные переходы. По сути интерфейс командной строки представляет из себя язык программирования высокого уровня с развитыми средствами взаимодействия с операционной системой для осуществления операция с файлами, запуска программ и завершения работы программ. Для работы такого интерфейса требуется специальная программа - интерпретатор командной строки.
 
-По сути интерфейс командной строки представляет из себя язык программирования относительно* высокого уровня с развитыми средствами взаимодействия с операционной системой для осуществления операций с файлами, запуска программ и завершения работы программ. 
-(Современные языки программирования по типу Python, Kotlin,  JS, в какой-то степени Dart являются более интуитивно понятными и большинство действий для которых в bash потребуется написать целый скрипт там выполняются всего в несколько строк кода. Bash в данном случае, скорее схож с языками C, C++, которые в современных реалиях многими считаются низкоуровневыми)
-Для работы такого интерфейса требуется специальная программа - интерпретатор командной строки.  
-Существует множество интерпретаторов. В операционных системах Microsoft это cmd и PowerShell, в unix системах - bash, dash, ksh, csh, zsh и другие. 
-В случае с unix системами базовые возможности интерпретаторов совпадают, отличаются они лишь дополнительными функциями, которые применяются в основном лишь для написания сложных скриптов.
+Существует множество интерпретаторов. В операционных системах Microsoft это cmd и PowerShell, в unix системах (и linux в том числе) - bash, dash, ksh, csh, zsh и другие. Несмотря на такое многообразие, принципы работы во всех них одинаковые. В случае с unix системами базовые возможности интерпретаторов совпадают, отличаются дополнительные функции. Для повседневной работы с ОС эти функции не нужны, но являются востребованными для написания сложных скриптов.
 
 ## Основные команды для работы в терминале
+Приведённые ниже команды являются базовыми для манипуляций с файлами и повседневной работы.
+
 - `cd` - смена текущего каталога
 - `ls` - просмотр содержимого каталога
 - `rm` - удаление файла или иного объекта
@@ -25,7 +19,7 @@ CLI строится на взаимодействие с ЭВМ с помощь
 - `nano` - текстовый редактор, наверное, самый популярный в системах Linux
 - `man` - показывает страницы с мануалом по какой-либо программе
 
-Для запуска скомпилированной программы необходимо указать её путь через точку перед названием : `./prog.bin`  
+Для запуска программ, установленных в системе, их имена набираются в командной строке (и дополняются параметрами при необходимости, как в случае с nano). Для запуска своей программы, находящейся в текущем каталоге необходимо указать полный путь к исполняемому файлу. Либо он начинается с корневого каталога `/`, либо можно воспользоваться служебным именем `.`, которо обозначает полный путь к текущему каталогу. Запуск скомпилированной на ассемблере программы с именем исполняемого файла prog.bin будет выглядеть как `./prog.bin`.
 
 ## Сетевые настройки
 Для ручного управления сетевыми настройками используется утилита `ip`. У неё есть обязательный параметр, который указывает, с какими настройками мы хотим работать. 
@@ -36,20 +30,19 @@ CLI строится на взаимодействие с ЭВМ с помощь
 - 
 Без параметров приведённые команды выводят информацию о настройках.
 
-- `ipconfig` - устаревший аналог ip
-- `arp` - утилита для работы с протоколом arp. Может понадобится для просмотра содержимого arp кеша и его очистки.
-- `ping` позволяет проверить, доходит ли до удалённого узла специальный диагностический пакет. 
-- `traceroute` использует аналогичные сетевые пакеты, что и ping, но позволяет просмотреть все промежуточные маршрутизаторы на пути к удалённой машине.
-- `nslookup` используется для проверки службы DNS,  посредством обращения к DNS серверу и преобразование из IP адреса в символьное имя и обратно или запрос к записям типа `srv` или `mx`.
+Кроме `ip` существует ещё одна утилиты - `ipconfig`. Но сейчас в Linux её считают устаревшей и не рекомендуют к использованию. Хотя в Unix системах вполне могут продолжать использовать до сих пор.
+
+Для работы с протоколом `arp` в Linux существует одноимённая утилита. Она может понадобится для просмотра содержимого arp кеша и его очистки.
+
+Проверка работы сети в основном осуществляется с помощью утилит `ping` и `traceroute`. `ping` позволяет проверить, доходит ли до удалённого узла специальный диагностический пакет. Существуют ситуации, когда узел рабочий, но не отвечает на такие сообщения. Про эти ситуации мы поговорим в разделе о сетевых фильтрах. `traceroute` использует аналогичные сетевые пакеты, что и ping, но позволяет просмотреть все промежуточные маршрутизаторы на пути к удалённой машине.
+
+Для проверки работы службы DNS используется `nslookup`, которая осуществляет обращение к DNS серверу и преобразование из IP адреса в символьное имя и обратно или запрос к записям типа srv или mx. Существует более функциональная версия этой утилиты - `dig`.
 
 ## Работа с пользователями.
 
-Работа с пользователями и группами осуществляется командами `adduser`/`addgroup`/`deluser`/`useradd`/`usermod`
+Работа с пользователями и группами **adduser/addgroup/deluser/useradd/usermod**
 
-Изменение паролей - `passwd`. 
-
-Создание хешей паролей - `mkpasswd`.
-
+Изменение паролей `passwd`. Создание хешей паролей `mkpasswd`.
 
 ## Дополнительные возможности
 
