--- a/Lec/6.md
+++ b/Lec/6.md
@@ -8,20 +8,23 @@
 
 ## Windows 10
 
-- **ЦП**: с частотой не менее 1ГГц
-- **ОЗУ**: 1 ГБ для 32-разрядной системы или 2 ГБ для 64-разрядной системы
-- **Место на жёстком диске**: 16 ГБ для 32-разрядной ОС или 20 ГБ для 64-разрядной ОС
-- **Видеоадаптер**: DirectX 9 или более поздняя версия с драйвером WDDM 1.0
-- **Экран**: 800 x 600
+- **Процессор** с частотой не менее 1ГГц. Microsoft не указывает конкретных требований к поддержке определённых инструкций. Предполагается, что все процессоры с этой частотой их уже имеют.
+- **Количество оперативной памяти** минимум 1Гб для 32-х разрядной версии и 2Гб для 64-х.
+- **Место на устройстве** хранения - 16Гб для 32-х разрядной версии и 20Гб для 64-х. Больший размер для 64-х разрядной версии объясняется включением компонентов из 32-х разрядной для возможности запуска имеющихся  приложений.
+- **Видеокарта** с разрешением 800х600 и драйвером стандарта WDDM 1.0 (с поддержкой Direct X 9.0). Основная сложность будет с наличием драйвера WDDM, потому что не для всех старых видеокарт такие драйверы существуют.
+
+Соответствие этим требованиям позволит ОС работать, но некоторые компоненты могут потребовать дополнительного оборудования.
 
 ## Windows Server 2012 
 
-- **ЦП**: 64-х разрядный с частотой 1.4 ГГц
-- **ОЗУ**: минимум 512 Мб
-- **Место на устройстве хранения**: 32 GB
-- **Видеокарта и монитор**: с разрешением не менее 800х600
-- **Клавиатура и мышь**
-- **Доступ к сети Интернет**
+- **Процессор** 64-х разрядный с частотой 1.4 ГГц
+- **ОЗУ** минимум  512 Мб.
+- **Место на устройстве** хранения 32 GB. Это абсолютный минимум, при наличии более 16Гб оперативной памяти потребуется больше для размещения файлов подкачки и сна. Так же дополнительное место потребуется при проведении установки по сети. Как и с настольными версиями в последствии потребуется ещё место для скачивания и установки обновлений.
+- **Видеокарта и монитор** с разрешением не менее 800х600.Требования к драйверам, как у настольных версий здесь нет.
+- **Клавиатура и мышь**.
+- **Доступ к сети Интернет**.
+
+Стоит отметить отсутствие поддержки 32-х разрядных процессоров. Считается, что ОС будет ставится только на достаточно свежее оборудование, где их не будет.
 
 ## Windows Server 2016
 
