--- a/Lec/7.md
+++ b/Lec/7.md
@@ -1,28 +1,11 @@
 # Установка дополнителного ПО и компонентов Windows
 
-Существует два варианта установки дополнительного ПО для Windows:
+Существует два варианта установки дополнительного ПО для Windows. 
 
-- Добавление компонентов Windows, расширяющих её функциональность (библиотеки .Net или клиент telnet).Различные редакции настольной Windows (home, sl, pro и enterprise) могут содержать различные компоненты.
-- Все, компоненты, службы и программы, которые что не входят в состав ОС в Windows устанавливается с помощью специальных пакетов, являющимися исполняемыми файлами, производящими копирование и настройку устанавливаемого ПО. Так как этот вариант не стандартизирован, то и удаление программы после её установки - на совести программы-установщика.
+**Первый** - добавление компонентов Windows, расширяющих её функциональность. В качестве примера можно привести библиотеки .Net или клиент telnet. Кроме программ к компонентам Windows так же относятся различные службы. Они входят в серверную редакцию ОС и могут быть недоступны в настольных. Различные редакции настольной Windows (`home, sl, pro и enterprise`) могут содержать различные компоненты.
 
-Стандартным способом установки для Windows являются msi пакеты.
+Всё, что не входит в состав ОС в Windows устанавливается с помощью специальных пакетов. Обычно это исполняемые файлы, производящие копирование и настройку устанавливаемого ПО. Средства автоматизации и установки из консоли без участия пользователя реализованы не всегда. Но такой вариант не стандартизирован и удаление программы после её установки остаётся на совести программы-установщика.
 
-К сожалению, далеко не все производители упаковывают в них своё ПО. 
-Эти пакеты аналогичны обычным программам для установки, но благодаря стандартизации в них обязательно присутствует удаление ПО и возможность установки в автоматическом режиме. 
-Только такие пакеты можно использовать для автоматической установки по сети используя политики **MS Active Directory**.
+Стандартным способом установки для Windows являются `msi` пакеты. Но к сожалению, далеко не все производители упаковывают в них своё программное обеспечение. По логике работы эти пакеты аналогичны обычным программам для установки, но благодаря стандартизации в них обязательно присутствует удаление установленного ПО и возможность установки в автоматическом режиме без участия пользователя. Только такие пакеты можно использовать для автоматической установки по сети используя политики **MS Active Directory**.
 
-При добавлении компонентов ОС Windows настольные и серверные версии сильно отличаются: 
-
-- Для **настольных** версий доступ к компонентам производится через панель управления, установка и удаление программ.
-
-- В **серверных** ОС установка и удаление компонентов осуществляется  через пункт меню «Manage→Add roles and features» в «Server Manager». 
-
-Компоненты считается двумя частями:
-- **ролями** (roles) - в основном это сетевые службы
-- **возможностями** (features) - интерфейсы управления или мелкие утилиты
-
-Установка и первоначальная настройка всех ролей производится с помощью графических мастеров. После установки роли оснастка её управления обязательно появится в меню *«Tool»* в окне *«Server Manager»*. 
-
-В отличии от Linux Windows не использует множество мелких модулей, библиотек и программ. Поэтому процесс обновления на ней гораздо сложнее.
-
-Количество компонент во много раз меньше, чем сетевых служб в репозиториях Linux.
+При добавлении компонентов ОС Windows настольные и серверные версии сильно отличаются. Для настольных версий доступ к компонентам производится через панель управления, установка и удаление программ (или программы и компоненты) и оснастку «компоненты windwos». Из полезных для некоторых редакций в компонентах есть веб сервер **IIS** и гипервизоа **HyperV**. В серверных ОС установка и удаление компонентов осуществляется  через пункт меню **«Manage→Add roles and features»** в **«Server Manager»**. Часть компонент считается ролями (`roles` - в основном это сетевые службы), часть возможностями (`features` — интерфейсы управления или мелкие утилиты). При установки роли вполне может быть, что будет предложена установка нескольких других ролей и возможностей для корректной работы и управления этой службой. Установка и первоначальная настройка всех ролей производится с помощью графических мастеров, поэтому не представляет особой сложности. После установки роли оснастка её управления обязательно появится в меню «Tool» в окне «Server Manager». Практически все компоненты уже находятся на разделе с установленной копией Windows и их скачивание не требуется. В отличии от Linux Windows не использует множество мелких модулей, библиотек и программ. Поэтому процесс обновления на ней гораздо сложнее. Количество компонент во много раз меньше, чем сетевых служб в репозитариях Linux. С другой стороны это компенсируется наличием коммерческой поддержки на имеющиеся компоненты и хоть какой-то подтверждённой гарантией решения проблем (не абсолютной, но документально заключаемой).
