--- a/Lec/9.md
+++ b/Lec/9.md
@@ -1,13 +1,13 @@
 ## Выполнения задач в Linux по расписанию
+Для выполнения задач в Linux по расписанию используется служба `cron` или утилита `at`.
 
-Для выполнения задач в Linux по расписанию используется служба **cron** или утилита **at**
+Строго говоря, утилита `at` запускает задачи не по расписанию, а в заданное время один раз. Но при администрировании иногда удобно сделать отложенный запуск команды. Кроме того, при использовании этой утилиты команда будет выполняться польность в том жэе окружении, где работал системный администратор при формировании задания (текущий каталог и переменные окружения).
 
-**at** запускает задачи не по расписанию, а в заданное время один раз
-
+Синтаксис запуска:
 `at 11:01` - после ввода этой команды откроется приглашение консоли для ввода одной или нескольких команд для выполнения.
 Для завершения ввода необходимо нажать `Ctrl+D`
 
-Для взаимодействия со службой **cron** используется утилита **crontab**:
+Для взаимодействия со службой `cron` используется утилита `crontab`:
 - `-I` - показывает очередь регулярных заданий
 - `-e` - запускает редактор для редактирования заданий
 
